--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CAO Saúde - Sistema de Gestão de Demandas</title>
+    <link rel="icon" href="/logo_caods.png" type="image/png" />
     <meta name="description" content="Sistema de gestão de demandas do Centro de Apoio Operacional de Defesa da Saúde. Registre, acompanhe e gerencie solicitações de forma eficiente." />
     <meta name="author" content="CAO Saúde - MPPI" />
     <meta name="keywords" content="CAO, Saúde, Ministério Público, Piauí, demandas, solicitações, gestão" />
